821: Manteniment de tipus d'expedient
Task-Url: https://github.com/GovernIB/helium/issues/issues/821

Pestanya d'informació
Pestanya de definicions de procés

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -248,10 +248,23 @@ expedient.tipus.llistat.accio.dissenyar=Dissenyar
 expedient.tipus.llistat.accio.esborrar=Esborrar
 expedient.tipus.llistat.confirmacio.esborrar=Estau segur que voleu esborrar aquest tipus d'expedient? Aquesta acció no es pot tornar enrera una vegada executada.
 
-expedient.tipus.info.titol=Configuració del tipus d'expedient
-expedient.tipus.info.informacio=Informació
+expedient.tipus.pipelles.titol=Configuració del tipus d'expedient
+expedient.tipus.pipelles.pipella.informacio=Informació
+expedient.tipus.pipelles.pipella.estats=Estats
+expedient.tipus.pipelles.pipella.variables=Variables
+expedient.tipus.pipelles.pipella.definicions.proces=Definicions de procés
+expedient.tipus.pipelles.pipella.integracio.tramits=Integració amb tràmits
+expedient.tipus.pipelles.pipella.integracio.forms=Integració amb forms
+expedient.tipus.pipelles.pipella.enumeracions=Enumeracions
+expedient.tipus.pipelles.pipella.documents=Documents
+expedient.tipus.pipelles.pipella.terminis=Terminis
+expedient.tipus.pipelles.pipella.accions=Accions
+expedient.tipus.pipelles.pipella.dominis=Dominis
+expedient.tipus.pipelles.pipella.consultes=Consultes
+
 expedient.tipus.info.camp.codi=Codi
 expedient.tipus.info.camp.titol=Títol
+expedient.tipus.info.camp.ambInfoPropia=Amb informació pròpia
 expedient.tipus.info.camp.amb.titol=Amb títol?
 expedient.tipus.info.camp.demana.titol=Demana títol?
 expedient.tipus.info.camp.amb.numero=Amb número?
@@ -263,23 +276,13 @@ expedient.tipus.info.camp.reponsable.defecte=Responsable per defecte
 expedient.tipus.info.accio.modificar=Modificar
 expedient.tipus.info.accio.agrupar=Agrupar
 expedient.tipus.info.accio.desagrupar=Desagrupar
-expedient.tipus.info.pipella.estats=Estats
-expedient.tipus.info.pipella.variables=Variables
-expedient.tipus.info.pipella.definicions.proces=Definicions de procés
-expedient.tipus.info.pipella.integracio.tramits=Integració amb tràmits
-expedient.tipus.info.pipella.integracio.forms=Integració amb forms
-expedient.tipus.info.pipella.enumeracions=Enumeracions
-expedient.tipus.info.pipella.documents=Documents
-expedient.tipus.info.pipella.terminis=Terminis
-expedient.tipus.info.pipella.accions=Accions
-expedient.tipus.info.pipella.dominis=Dominis
-expedient.tipus.info.pipella.consultes=Consultes
 expedient.tipus.info.permis.no=No disposa de permís per a modificar l'expedient
 
 expedient.tipus.form.titol.nou=Crear nou tipus d'expedient
 expedient.tipus.form.titol.modificar=Modificar tipus d'expedient
 expedient.tipus.form.camp.codi=Codi
 expedient.tipus.form.camp.titol=Títol
+expedient.tipus.form.camp.ambInfoPropia=Amb informació pròpia
 expedient.tipus.form.camp.teTitol=Amb títol
 expedient.tipus.form.camp.demanaTitol=Demana títol
 expedient.tipus.form.camp.teNumero=Amb número
@@ -337,6 +340,7 @@ expedient.tipus.camp.llistat.accio.esborrar.correcte=La variable s'ha esborrat c
 
 expedient.tipus.camp.llistat.confirmacio.esborrar=Estau segur que voleu esborrar aquesta variable?
 expedient.tipus.camp.llistat.agrupacio.seleccionada=Agrupació seleccionada
+expedient.tipus.camp.llistat.agrupacio.seleccionada.placeholder=Cap
 expedient.tipus.camp.llistat.agrupacio.boto.crear=Crear nova agrupació
 expedient.tipus.camp.llistat.agrupacio.boto.modificar=Modificar la agrupació seleccionada
 expedient.tipus.camp.llistat.agrupacio.boto.esborrar=Eliminar la agrupació seleccionada
@@ -415,6 +419,21 @@ expedient.tipus.agrupacio.llistat.titol=Reordenació de les agrupacions
 expedient.tipus.agrupacio.llistat.columna.codi=Codi
 expedient.tipus.agrupacio.llistat.columna.nom=Nom
 expedient.tipus.agrupacio.llistat.columna.ordre=Ordre
+
+# Manteniment de definicions de processos del tipus d'expedient
+expedient.tipus.definicioProces.llistat.columna.nom=Nom
+expedient.tipus.definicioProces.llistat.columna.versio=Versió
+expedient.tipus.definicioProces.llistat.columna.dataVersio=Data versió
+expedient.tipus.definicioProces.llistat.columna.inicial=Inicial
+expedient.tipus.definicioProces.llistat.columna.global=Global
+expedient.tipus.definicioProces.llistat.definicioProces.desplegar=Desplegar arxiu
+expedient.tipus.definicioProces.llistat.definicioProces.inicial=Marcar com inicial
+expedient.tipus.definicioProces.llistat.definicioProces.inicial.error=S'ha produït un error al interntar establir la definició de procés inicial
+expedient.tipus.definicioProces.llistat.definicioProces.inicial.correcte=La definició de procés s'ha marcat com a inicial correctament
+expedient.tipus.definicioProces.llistat.definicioProces.esborrar=Esborrar
+expedient.tipus.definicioProces.llistat.definicioProces.esborrar.confirmacio=Estau segur que voleu esborrar aquesta definició de procés?
+expedient.tipus.definicioProces.llistat.definicioProces.esborrar.error=S'ha produït un error al interntar esborrar la definició de procés del tipus d'expedient
+expedient.tipus.definicioProces.llistat.definicioProces.esborrar.correcte=La definició de procés s'ha esborrat correctament
 
 ### MANTENIMENT DOCUMENTS DEL TIPUS D'EXPEDIENT ###
 expedient.tipus.document.llistat.columna.codi=Codi
