792: Eliminar DP nivell tipus d'expedient (MID: 0000797)
Task-Url: http://github.com/GovernIB/helium/issues/issue/792

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
@@ -451,6 +451,12 @@ info.camp.tasca.esborrat=S'ha esborrat el camp de la tasca
 
 info.defproc.esborrat=La definició de procés s'ha esborrat correctament
 info.defproc.esborrada=La definició de procés {0} v.{1} s'ha esborrat correctament
+info.defproc.esborrar.afectats=Expedients afectats:
+info.defproc.esborrar.afectats.programar=Programar borrat de logs de tots els expedients afectats
+info.defproc.esborrar.massiu.executat=S''ha programat la eliminacio de la informacio de registre de {0} expedients com a execucio massiva
+info.defproc.esborrar.massiu.expedient.executat=S'ha programat la eliminacio de la informacio de registre de l'expedient com a execucio massiva
+info.defproc.esborrar.log.executat=S'ha eliminat la informacio de registre de l'expedient
+
 info.dades.importat=Les dades s'han importat correctament
 
 txt.desplegament.jbpm=Desplegament jBPM
@@ -503,6 +509,7 @@ info.accio.executades=Les accions s'han executat correctament
 info.accio.massiu.executat=S&#39;ha programat la execució d''accions a {0} expedient(s)
 info.reindexar.massiu.executat=S&#39;ha programat la reindexació de {0} expedient(s)
 info.buidarlog.massiu.executat=S&#39;ha programat la eliminació de la informació de registre de {0} expedient(s)
+info.buidarlog.executat=S'ha eliminat la informació de registre de l'expedient
 info.accio.massiu.reassignat=S&#39;ha programat la reassignació de {0} tasca(ques)
 info.accio.massiu.reprendre=S&#39;ha programat l&#39;acció de reprendre tramitació de {0} expedient(s)
 info.accio.massiu.reprendre_expedient=S&#39;ha programat l'acció de desfer finalització de {0} expedient(s)
