792: Eliminar DP nivell tipus d'expedient (MID: 0000797)
Task-Url: http://github.com/GovernIB/helium/issues/issue/792

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
@@ -453,7 +453,8 @@ info.defproc.esborrat=La definició de procés s'ha esborrat correctament
 info.defproc.esborrada=La definició de procés {0} v.{1} s'ha esborrat correctament
 info.defproc.esborrar.afectats=Expedients afectats:
 info.defproc.esborrar.afectats.programar=Programar borrat de logs de tots els expedients afectats
-info.defproc.esborrar.massiu.executat=S'ha programat la eliminacio de la informacio de registre de {0} expedient(s)
+info.defproc.esborrar.massiu.executat=S''ha programat la eliminacio de la informacio de registre de {0} expedients com a execucio massiva
+info.defproc.esborrar.massiu.expedient.executat=S'ha programat la eliminacio de la informacio de registre de l'expedient com a execucio massiva
 info.defproc.esborrar.log.executat=S'ha eliminat la informacio de registre de l'expedient
 
 info.dades.importat=Les dades s'han importat correctament
