--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
@@ -294,6 +294,9 @@ expedient.tipus.form.seq_actuals=Seqüències actuals
 expedient.tipus.form.amb_retroaccio=Amb retroacció
 expedient.tipus.form.reindexacio_asincrona=Reindexació asíncrona
 
+expedient.tipus.termini.form.titol.nou=Nou termini
+expedient.tipus.termini.form.titol.modificar=Modificar termini
+
 expedient.massiva.reassignacio=Reassignació massiva de tasques
 expedient.massiva.titol=Execució d'accions massives
 expedient.massiva.info=Expedients seleccionats
