820: Simplificació de la configuració en les definicions de procés
Task-Url: http://github.com/GovernIB/helium/issues/820

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
@@ -296,6 +296,9 @@ expedient.tipus.form.reindexacio_asincrona=Reindexació asíncrona
 
 expedient.tipus.termini.form.titol.nou=Nou termini
 expedient.tipus.termini.form.titol.modificar=Modificar termini
+expedient.tipus.termini.controller.creat=Termini creat correctament
+expedient.tipus.termini.controller.eliminat=Termini esborrat correctament
+expedient.tipus.termini.controller.eliminat.no=No s'ha pogut esborrar el termini
 
 expedient.massiva.reassignacio=Reassignació massiva de tasques
 expedient.massiva.titol=Execució d'accions massives
