820: Simplificació de la configuració en les definicions de procés
Task-Url: https://github.com/GovernIB/helium/issues/issues/820

Commit corresponent a la pestanya de definicions de procés i al procés
d'incorporació de la informació d'una definició de procés.

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -430,10 +430,19 @@ expedient.tipus.definicioProces.llistat.definicioProces.desplegar=Desplegar arxi
 expedient.tipus.definicioProces.llistat.definicioProces.inicial=Marcar com inicial
 expedient.tipus.definicioProces.llistat.definicioProces.inicial.error=S'ha produït un error al interntar establir la definició de procés inicial
 expedient.tipus.definicioProces.llistat.definicioProces.inicial.correcte=La definició de procés s'ha marcat com a inicial correctament
+expedient.tipus.definicioProces.llistat.definicioProces.importar=Importar la informació
+expedient.tipus.definicioProces.llistat.definicioProces.importar.error=S'ha produït un error durant la importació de la informació de la definició de procés
+expedient.tipus.definicioProces.llistat.definicioProces.importar.correcte=La informació de la definició de procés s'ha importat correctament al tipus d'expedient
 expedient.tipus.definicioProces.llistat.definicioProces.esborrar=Esborrar
 expedient.tipus.definicioProces.llistat.definicioProces.esborrar.confirmacio=Estau segur que voleu esborrar aquesta definició de procés?
 expedient.tipus.definicioProces.llistat.definicioProces.esborrar.error=S'ha produït un error al interntar esborrar la definició de procés del tipus d'expedient
 expedient.tipus.definicioProces.llistat.definicioProces.esborrar.correcte=La definició de procés s'ha esborrat correctament
+
+expedient.tipus.definicioProces.importar.titol=Importació de la informació de la definició de procés
+expedient.tipus.definicioProces.importar.versio=Versió de la definició de procés
+expedient.tipus.definicioProces.importar.versio.placeholder=<< Darrera versió >>
+expedient.tipus.definicioProces.importar.sobreescriure=Sobreescriure informació amb el mateix codi
+expedient.tipus.definicioProces.importar.accio.importar=Importar informació
 
 ### MANTENIMENT DOCUMENTS DEL TIPUS D'EXPEDIENT ###
 expedient.tipus.document.llistat.columna.codi=Codi
@@ -544,6 +553,13 @@ expedient.tipus.enumeracio.valors.importar.arxiu.buid=Heu de seleccionar un arxi
 expedient.tipus.enumeracio.valors.importats=Els valor s'han importat correctament.
 expedient.tipus.enumeracio.valors.importats.error=S'ha produït un error durant la'importació dels valors.
 ## FI MANTENIMENT DE ENUMERACIONS A TIPUS DE EXPEDIENT ##
+
+expedient.tipus.termini.form.titol.nou=Nou termini
+expedient.tipus.termini.form.titol.modificar=Modificar termini
+expedient.tipus.termini.controller.creat=Termini creat correctament
+expedient.tipus.termini.controller.modificat=Termini modificat correctament
+expedient.tipus.termini.controller.eliminat=Termini esborrat correctament
+expedient.tipus.termini.controller.eliminat.no=No s'ha pogut esborrar el termini
 
 expedient.accio.errors.titol=Errors de l'expedient
 expedient.accio.aturar.titol=Aturar expedient
