821: Manteniment de tipus d'expedient
Task-Url: http://github.com/GovernIB/helium/issues/821

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -561,6 +561,21 @@ expedient.tipus.termini.controller.modificat=Termini modificat correctament
 expedient.tipus.termini.controller.eliminat=Termini esborrat correctament
 expedient.tipus.termini.controller.eliminat.no=No s'ha pogut esborrar el termini
 
+expedient.tipus.domini.tipus.sql=SQL
+expedient.tipus.domini.tipus.ws=WS
+expedient.tipus.domini.nou=Nou domini
+
+expedient.tipus.estat.nou=Nou estat
+expedient.tipus.estat.form.titol.nou=Nou estat
+expedient.tipus.estat.form.titol.modificar=Modificar estat
+expedient.tipus.estat.form.estat.codi=Codi
+expedient.tipus.estat.form.estat.nom=Nom
+expedient.tipus.estat.controller.creat=Estat creat correctament
+expedient.tipus.estat.controller.modificat=Estat modificat correctament
+expedient.tipus.estat.controller.eliminat=Estat esborrat correctament
+expedient.tipus.estat.controller.eliminat.no=No s'ha pogut esborrar l'estat
+expedient.tipus.estat.llistat.confirmacio.esborrar=Estau segur que voleu esborrar aquest estat?
+
 expedient.accio.errors.titol=Errors de l'expedient
 expedient.accio.aturar.titol=Aturar expedient
 expedient.accio.script.confirmacio=Estau segur que voleu aturar la tramitació d'aquest expedient?
