821: Manteniment de tipus d'expedient
Task-Url: http://github.com/GovernIB/helium/issues/821

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -564,6 +564,39 @@ expedient.tipus.termini.controller.eliminat.no=No s'ha pogut esborrar el termini
 expedient.tipus.domini.tipus.sql=SQL
 expedient.tipus.domini.tipus.ws=WS
 expedient.tipus.domini.nou=Nou domini
+expedient.tipus.domini.form.titol.nou=Nou domini
+expedient.tipus.domini.form.titol.modificar=Modificar domini
+expedient.tipus.domini.form.domini.dades=Dades del domini
+expedient.tipus.domini.form.domini.codi=Codi
+expedient.tipus.domini.form.domini.nom=Nom
+expedient.tipus.domini.form.domini.tipus=Tipus
+expedient.tipus.domini.form.domini.tipus.placeholder=Seleccioni un tipus de domini
+expedient.tipus.domini.form.domini.cache.segons=Temps en cache
+expedient.tipus.domini.form.domini.cache.segons.comentari=En segons (0 = no cache)
+expedient.tipus.domini.form.domini.timeout=Timeout
+expedient.tipus.domini.form.domini.timeout.comentari=En segons (buit / 0 = sense valor específic)
+expedient.tipus.domini.form.domini.descripcio=Descripció
+expedient.tipus.domini.form.domini.dades.ws=Dades connexió WS
+expedient.tipus.domini.form.domini.url=URL
+expedient.tipus.domini.form.domini.tipus.auth=Tipus d'autenticació
+expedient.tipus.domini.form.domini.origen.credencials=Origen de les credencials
+expedient.tipus.domini.form.domini.usuari=Usuari
+expedient.tipus.domini.form.domini.contrasenya=Contrasenya
+expedient.tipus.domini.form.domini.dades.sql=Dades connexió SQL
+expedient.tipus.domini.form.domini.datasource=JNDI del datasource
+expedient.tipus.domini.form.domini.sql=SQL
+expedient.tipus.domini.tipus.CONSULTA_SQL=Consulta tipus SQL 
+expedient.tipus.domini.tipus.CONSULTA_WS=Consulta tipus WS
+expedient.tipus.domini.tipus.auth.NONE=None 
+expedient.tipus.domini.tipus.auth.HTTP_BASIC=Http BASIC
+expedient.tipus.domini.tipus.auth.USERNAMETOKEN=USERNAMETOKEN 
+expedient.tipus.domini.origen.ATRIBUTS=Atributs
+expedient.tipus.domini.origen.PROPERTIES=Fitxer de propietats
+
+expedient.tipus.domini.controller.creat=Domini creat correctament
+expedient.tipus.domini.controller.modificat=Domini modificat correctament
+expedient.tipus.domini.controller.eliminat=Domini esborrat correctament
+expedient.tipus.domini.controller.eliminat.no=No s'ha pogut esborrar el domini
 
 expedient.tipus.estat.nou=Nou estat
 expedient.tipus.estat.form.titol.nou=Nou estat
