820: Simplificació de la configuració en les definicions de procés
Task-Url: https://github.com/GovernIB/helium/issues/issues/820

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -332,6 +332,7 @@ expedient.tipus.camp.llistat.columna.tipus=Tipus
 expedient.tipus.camp.llistat.columna.multiple=Múltiple
 expedient.tipus.camp.llistat.accio.permisos=Permisos
 expedient.tipus.camp.llistat.accio.validacions=Validacions
+expedient.tipus.camp.llistat.accio.campsRegistre=Camps
 expedient.tipus.camp.llistat.accio.nova=Nova variable
 expedient.tipus.camp.llistat.accio.modificar=Modificar
 expedient.tipus.camp.llistat.accio.esborrar=Esborrar
@@ -414,6 +415,30 @@ expedient.tipus.campValidacio.controller.creat=La validació s'ha creat correctam
 expedient.tipus.campValidacio.controller.modificat=La validació s'ha modificat correctament
 expedient.tipus.campValidacio.controller.eliminar.success=La validació s'ha elimitat correctament
 expedient.tipus.campValidacio.controller.eliminar.error=S'ha produït un error intentant eliminar la validació
+
+expedient.tipus.campRegistre.llistat.titol=Camps del registre {0}
+expedient.tipus.campRegistre.llistat.columna.membreCodi=Codi variable
+expedient.tipus.campRegistre.llistat.columna.membreEtiqueta=Nom variable
+expedient.tipus.campRegistre.llistat.columna.membreTipus=Tipus
+expedient.tipus.campRegistre.llistat.columna.obligatori=Obligatori
+expedient.tipus.campRegistre.llistat.columna.llistar=Mostrar a la llista
+expedient.tipus.campRegistre.llistat.columna.ordre=Ordre
+expedient.tipus.campRegistre.llistat.accio.crear=Crear nou camp del registre
+expedient.tipus.campRegistre.llistat.accio.modificar=Modificar
+expedient.tipus.campRegistre.llistat.accio.esborrar=Esborrar
+expedient.tipus.campRegistre.llistat.confirmacio.esborrar=Estau segur que voleu esborrar aquest camp?
+
+expedient.tipus.campRegistre.form.titol.nou=Crear una nova validació
+expedient.tipus.campRegistre.form.titol.modificar=Modificar la validació
+expedient.tipus.campRegistre.form.camp.variable=Variable
+expedient.tipus.campRegistre.form.camp.variable.placeholder=Seleccioni la variable membre
+expedient.tipus.campRegistre.form.camp.obligatori=Obligatori
+expedient.tipus.campRegistre.form.camp.llistar=Mostrar a la llista
+
+expedient.tipus.campRegistre.controller.creat=El camp s'ha creat correctament
+expedient.tipus.campRegistre.controller.modificat=El camp s'ha modificat correctament
+expedient.tipus.campRegistre.controller.eliminar.success=El camp s'ha elimitat correctament
+expedient.tipus.campRegistre.controller.eliminar.error=S'ha produït un error intentant eliminar el camp
 
 expedient.tipus.agrupacio.llistat.titol=Reordenació de les agrupacions
 expedient.tipus.agrupacio.llistat.columna.codi=Codi
