#821: Manteniment de tipus d'expedient. Redireccions
Task-Url: https://github.com/GovernIB/helium/issues/issues/821

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -260,6 +260,7 @@ expedient.tipus.pipelles.pipella.documents=Documents
 expedient.tipus.pipelles.pipella.terminis=Terminis
 expedient.tipus.pipelles.pipella.accions=Accions
 expedient.tipus.pipelles.pipella.dominis=Dominis
+expedient.tipus.pipelles.pipella.redireccions=Redireccions
 expedient.tipus.pipelles.pipella.consultes=Consultes
 
 expedient.tipus.info.camp.codi=Codi
@@ -622,6 +623,31 @@ expedient.tipus.domini.controller.creat=Domini creat correctament
 expedient.tipus.domini.controller.modificat=Domini modificat correctament
 expedient.tipus.domini.controller.eliminat=Domini esborrat correctament
 expedient.tipus.domini.controller.eliminat.no=No s'ha pogut esborrar el domini
+
+# Manteniment de redireccions del tipus d'expedient
+expedient.tipus.redireccio.llistat.columna.usuariOrigen=Usuari origen
+expedient.tipus.redireccio.llistat.columna.usuariDesti=Usuari destí
+expedient.tipus.redireccio.llistat.columna.dataInici=Data d'inici
+expedient.tipus.redireccio.llistat.columna.dataFi=Data fi
+expedient.tipus.redireccio.llistat.accio.nova=Nova redirecció
+expedient.tipus.redireccio.llistat.accio.modificar=Modificar
+expedient.tipus.redireccio.llistat.accio.esborrar=Esborrar
+expedient.tipus.redireccio.llistat.accio.esborrar.confirmacio=Estau segur que voleu esborrar aquesta redirecció?
+expedient.tipus.redireccio.llistat.accio.esborrar.error=S'ha produït un error al interntar esborrar la redirecció del tipus d'expedient
+expedient.tipus.redireccio.llistat.accio.esborrar.correcte=La redirecció s'ha esborrat correctament
+
+expedient.tipus.redireccio.form.titol.nova=Crear una nova redirecció
+expedient.tipus.redireccio.form.titol.modificar=Modificar la redirecció
+expedient.tipus.redireccio.form.usuariOrigen=Usuari d'origen
+expedient.tipus.redireccio.form.usuariDesti=Usuari destí
+expedient.tipus.redireccio.form.dataInici=Data d'inici
+expedient.tipus.redireccio.form.dataFi=Data fi
+
+expedient.tipus.redireccio.controller.creat=La redirecció s'ha creat correctament
+expedient.tipus.redireccio.controller.modificat=La redirecció s'ha modificat correctament
+expedient.tipus.redireccio.controller.eliminat=La redirecció s'ha elimitat correctament
+expedient.tipus.redireccio.validacio.dataFi.anterior=La data fi ha de ser major o igual a la data d'inici
+expedient.tipus.redireccio.validacio = Errors de validació
 
 expedient.tipus.estat.nou=Nou estat
 expedient.tipus.estat.form.titol.nou=Nou estat
