#821: Manteniment de tipus d'expedient
Task-Url: https://github.com/GovernIB/helium/issues/issues/821

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -679,6 +679,83 @@ expedient.accio.modificar.boto.modificar=Modificar
 expedient.accio.buidarlog.confirmacio=Estau segur que voleu eliminar la informació de registre de l'expedient? Aquesta acció no es pot tornar enrera una vegada executada.
 expedient.accio.nom=Nombre
 
+expedient.tipus.consulta.llistat.columna.ordre=Ordre
+expedient.tipus.consulta.llistat.columna.codi=Codi
+expedient.tipus.consulta.llistat.columna.titol=Títol
+expedient.tipus.consulta.llistat.accio.variables.filtre=Vars. filtre
+expedient.tipus.consulta.llistat.accio.variables.informe=Vars. informe
+expedient.tipus.consulta.llistat.accio.parametres=Params.
+expedient.tipus.consulta.llistat.columna.actiu=Actiu
+expedient.tipus.consulta.llistat.accio.nova=Nova consulta
+expedient.tipus.consulta.llistat.accio.modificar=Modificar
+expedient.tipus.consulta.llistat.accio.esborrar=Esborrar
+expedient.tipus.consulta.llistat.accio.esborrar.error=S'ha produït un error al interntar esborrar la consulta del tipus d'expedient
+expedient.tipus.consulta.llistat.accio.esborrar.correcte=La consulta s'ha esborrat correctament
+
+expedient.tipus.consulta.llistat.confirmacio.esborrar=Estau segur que voleu esborrar aquesta consulta?
+
+expedient.tipus.consulta.form.titol.nou=Crear una nova consulta
+expedient.tipus.consulta.form.titol.modificar=Modificar la consulta
+expedient.tipus.consulta.form.codi=Codi
+expedient.tipus.consulta.form.titol=Títol
+expedient.tipus.consulta.form.descripcio=Descripció
+expedient.tipus.consulta.form.valorsPredefinits=Valors predefinits
+expedient.tipus.consulta.form.informe=Informe
+expedient.tipus.consulta.form.format=Format d'exportació
+expedient.tipus.consulta.form.exportarActiu=Exportar actiu?
+expedient.tipus.consulta.form.ocultarActiu=Desactivar?
+
+expedient.tipus.consulta.validacio.codi.repetit=Aquest codi ja existeix
+expedient.tipus.consulta.validacio.enumdomcons.buit=s''ha d''especificar una enumeració, un domini o una consulta
+expedient.tipus.consulta.controller.creat=La consulta s'ha creat correctament
+expedient.tipus.consulta.controller.modificat=La consulta s'ha modificat correctament
+expedient.tipus.consulta.controller.eliminat=La consulta s'ha elimitat correctament
+expedient.tipus.consulta.validacio = Errors de validació
+
+expedient.tipus.consulta.vars.llistat.titol=Variables tipus {0} de la consulta {1}
+expedient.tipus.consulta.vars.form.variable=Variable
+expedient.tipus.consulta.vars.form.variable.placeholder=Escolliu una variable
+expedient.tipus.consulta.vars.llistat.columna.variable=Variable
+expedient.tipus.consulta.vars.llistat.columna.tipus=Tipus
+expedient.tipus.consulta.vars.llistat.columna.ordre=Ordre
+expedient.tipus.consulta.vars.llistat.accio.afegir=Afegir
+expedient.tipus.consulta.vars.llistat.accio.esborrar=Esborrar
+expedient.tipus.consulta.vars.llistat.confirmacio.esborrar=Estau segur que voleu esborrar aquest registre?
+
+expedient.tipus.consulta.vars.controller.creat=La variable s'ha creat correctament
+expedient.tipus.consulta.vars.controller.eliminar.success=La variable s'ha elimitat correctament
+expedient.tipus.consulta.vars.controller.eliminar.error=S'ha produït un error intentant eliminar la variable
+
+expedient.tipus.consulta.params.llistat.titol=Paràmetres de la consulta {0}
+expedient.tipus.consulta.params.llistat.columna.codi=Codi
+expedient.tipus.consulta.params.llistat.columna.descripcio=Descripció
+expedient.tipus.consulta.params.llistat.columna.tipus=Tipus
+expedient.tipus.consulta.params.llistat.accio.crear=Crear nou paràmetre
+expedient.tipus.consulta.params.llistat.accio.modificar=Modificar
+expedient.tipus.consulta.params.llistat.accio.esborrar=Esborrar
+expedient.tipus.consulta.params.llistat.confirmacio.esborrar=Estau segur que voleu esborrar aquest paràmetre?
+
+expedient.tipus.consulta.params.form.titol.nou=Crear un nou paràmetre
+expedient.tipus.consulta.params.form.titol.modificar=Modificar el paràmetre
+expedient.tipus.consulta.params.form.camp.codi=Codi
+expedient.tipus.consulta.params.form.camp.descripcio=Descripció
+expedient.tipus.consulta.params.form.camp.tipus=Tipus
+
+expedient.tipus.consulta.params.validacio=Errors de validació
+expedient.tipus.consulta.params.validacio.codi.repetit=Aquest codi ja existeix
+expedient.tipus.consulta.params.controller.creat=El paràmetre s'ha creat correctament
+expedient.tipus.consulta.params.controller.modificat=El paràmetre s'ha modificat correctament
+expedient.tipus.consulta.params.controller.eliminar.success=El paràmetre s'ha elimitat correctament
+expedient.tipus.consulta.params.controller.eliminar.error=S'ha produït un error intentant eliminar el paràmetre
+
+consulta.llistat.titol=Consultes per tipus d'expedient
+consulta.llistat.columna.codi=Codi
+consulta.llistat.columna.titol=Títol
+consulta.llistat.columna.expedientTipusNom=Tipus d'expedient
+consulta.llistat.accio.esborrar=Esborrar
+consulta.llistat.confirmacio.esborrar=Estau segur que voleu esborrar aquesta consulta? Aquesta acció no es pot tornar enrera una vegada executada.
+
+
 tasca.llistat.titol=Consulta de tasques
 tasca.llistat.filtre.camp.titol=Títol
 tasca.llistat.filtre.camp.expedient=Expedient
@@ -805,6 +882,7 @@ comu.boto.modificar=Modificar
 comu.boto.esborrar=Esborrar
 comu.boto.tornar=Tornar
 comu.tots=Tots
+comu.arxiu=Arxiu
 
 comu.true=Sí
 comu.false=No
