#821: Manteniment de tipus d'expedient
Task-Url: https://github.com/GovernIB/helium/issues/issues/821

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -661,6 +661,19 @@ expedient.tipus.estat.controller.eliminat=Estat esborrat correctament
 expedient.tipus.estat.controller.eliminat.no=No s'ha pogut esborrar l'estat
 expedient.tipus.estat.llistat.confirmacio.esborrar=Estau segur que voleu esborrar aquest estat?
 
+expedient.tipus.integracio.forms.activar=Activar
+expedient.tipus.integracio.forms.url=Url del servei d'integració amb formularis externs
+expedient.tipus.integracio.forms.usuari=Usuari del servei
+expedient.tipus.integracio.forms.contrasenya=Contrasenya del servei
+expedient.tipus.integracio.forms.noaut=Si no necessita autenticació es pot deixar en blanc
+expedient.tipus.integracio.forms.processant=Processant ...
+
+expedient.tipus.integracio.forms.controller.guardat=Els canvis s'han guardat correctament
+expedient.tipus.integracio.forms.controller.error=Hi ha hagut un error guardant els canvis: {0}
+#expedient.tipus.integracio.forms.validacio.dataFi.anterior=La data fi ha de ser major o igual a la data d'inici
+expedient.tipus.integracio.forms.validacio = Errors de validació
+
+
 expedient.accio.errors.titol=Errors de l'expedient
 expedient.accio.aturar.titol=Aturar expedient
 expedient.accio.script.confirmacio=Estau segur que voleu aturar la tramitació d'aquest expedient?
