#821: Manteniment de tipus d'expedient
Task-Url: https://github.com/GovernIB/helium/issues/issues/821

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -669,10 +669,42 @@ expedient.tipus.integracio.forms.noaut=Si no necessita autenticació es pot deixa
 expedient.tipus.integracio.forms.processant=Processant ...
 
 expedient.tipus.integracio.forms.controller.guardat=Els canvis s'han guardat correctament
-expedient.tipus.integracio.forms.controller.error=Hi ha hagut un error guardant els canvis: {0}
-#expedient.tipus.integracio.forms.validacio.dataFi.anterior=La data fi ha de ser major o igual a la data d'inici
 expedient.tipus.integracio.forms.validacio = Errors de validació
 
+expedient.tipus.integracio.tramits.activar=Activar
+expedient.tipus.integracio.tramits.mapeig.variables=Mapeig de variables
+expedient.tipus.integracio.tramits.mapeig.documents=Mapeig de documents
+expedient.tipus.integracio.tramits.mapeig.adjunts=Mapeig de documents com adjunts
+expedient.tipus.integracio.tramits.variables=Variables
+expedient.tipus.integracio.tramits.documents=Documents
+expedient.tipus.integracio.tramits.adjunts=Adunts
+expedient.tipus.integracio.tramits.tramitCodi=Identificador del tràmit
+expedient.tipus.integracio.tramits.processant=Processant ...
+
+expedient.tipus.integracio.tramits.controller.guardat=Els canvis s'han guardat correctament
+expedient.tipus.integracio.tramits.validacio = Errors de validació
+
+expedient.tipus.integracio.tramits.mapeig.llistat.titol.Variable=Mapeig de variables
+expedient.tipus.integracio.tramits.mapeig.llistat.titol.Document=Mapeig de documents
+expedient.tipus.integracio.tramits.mapeig.llistat.titol.Adjunt=Mapeig de documents com adjunts
+expedient.tipus.integracio.tramits.mapeig.llistat.columna.codiHelium=Codi Helium
+expedient.tipus.integracio.tramits.mapeig.llistat.columna.codiSistra=Codi Sistra
+expedient.tipus.integracio.tramits.mapeig.llistat.accio.crear=Afegir nou mapeig
+expedient.tipus.integracio.tramits.mapeig.llistat.accio.modificar=Modificar
+expedient.tipus.integracio.tramits.mapeig.llistat.accio.esborrar=Esborrar
+expedient.tipus.integracio.tramits.mapeig.llistat.confirmacio.esborrar=Estau segur que voleu esborrar aquest mapeig?
+
+expedient.tipus.integracio.tramits.mapeig.form.titol.nou=Afegir nou mapeig
+expedient.tipus.integracio.tramits.mapeig.form.titol.modificar=Modificar el mapeig
+expedient.tipus.integracio.tramits.mapeig.form.camp.codiHelium=Codi Helium
+expedient.tipus.integracio.tramits.mapeig.form.camp.codiSistra=Codi Sistra
+
+expedient.tipus.integracio.tramits.mapeig.validacio=Errors de validació
+expedient.tipus.integracio.tramits.mapeig.validacio.codi.helium.repetit=Ja hi ha un mapeig per aquest codi Helium
+expedient.tipus.integracio.tramits.mapeig.validacio.codi.sistra.repetit=Ja hi ha un mapeig per aquest codi Sistra
+expedient.tipus.integracio.tramits.mapeig.controller.creat=El mapeig s'ha creat correctament
+expedient.tipus.integracio.tramits.mapeig.controller.modificat=El mapeig s'ha modificat correctament
+expedient.tipus.integracio.tramits.mapeig.controller.eliminar.success=El mapeig s'ha elimitat correctament
 
 expedient.accio.errors.titol=Errors de l'expedient
 expedient.accio.aturar.titol=Aturar expedient
