881: Eliminació definició procés com a tasca programada
Task-Url: https://github.com/GovernIB/helium/issues/issue/881

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
@@ -299,6 +299,7 @@ expedient.massiva.titol=Execució d'accions massives
 expedient.massiva.info=Expedients seleccionats
 expedient.massiva.canvi=Canviar selecci&#243;
 expedient.massiva.actualitzar=Canviar versi&#243; del proc&#233;s
+expedient.massiva.eliminar.versio.dp=Eliminar versi&#243; del proc&#233;s
 expedient.massiva.accions=Executar acci&#243;
 expedient.massiva.executarScriptMas=Executar script
 expedient.massiva.mos_ocul=Mostrar/ocultar llistat d'expedients
@@ -329,6 +330,7 @@ expedient.massiva.tasca.doc.generar=Generar document
 expedient.massiva.tasca.reg.borrar=Borrar registre
 expedient.massiva.tasca.reg.guardar=Guardar registre
 expedient.massiva.actualitzar.dp=Actualitzar definici&#243 de proc&#233;s
+expedient.massiva.eliminar.dp=Eliminar definici&#243 de proc&#233;s
 expedient.massiva.error.expedient=No es troba l'expedient vinculat a la inst&#224;ncia de procproc&#233;s:
 
 execucions.massives.no=No s''ha programat cap acció massiva
